--- a/cv.html
+++ b/cv.html
@@ -37,47 +37,72 @@
             <div class="container">
                 <div class="work-experience group">
                     <div class="heading">
-                        <h2 class="text-center">Work Experience</h2>
+                        <h2 class="text-center">educational qualifications</h2>
                     </div>
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>Web Developer</h3>
-                                <h4 class="organization">Amazing Co.</h4>
+                                <h3>Senior Secondary Education</h3>
+                                <h4 class="organization">Nava Bharath NAtional School</h4>
                             </div>
-                            <div class="col-md-6"><span class="period">10/2013 - 04/2015</span></div>
+                            <div class="col-md-6"><span class="period">2014-2015</span></div>
                         </div>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+                        <p class="text-muted">9.6 CGPA</p>
                     </div>
                     <div class="item">
                         <div class="row">
                             <div class="col-6">
-                                <h3>Front End Developer</h3>
-                                <h4 class="organization">Innovative Org.</h4>
+                                <h3>Higher Secondary Education:&nbsp; &nbsp; &nbsp; Computer Science- Maths</h3>
+                                <h4 class="organization">Vidya Vikas Boys Higher Secondary School</h4>
                             </div>
-                            <div class="col-md-6"><span class="period">05/2015 - 12/2017</span></div>
+                            <div class="col-md-6"><span class="period">2016-2017</span></div>
+                        </div>
+                        <p class="text-muted">80%</p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>Bachelor of Engineering-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Computer Science and Engineering</h3>
+                                <h4 class="organization">Kongu Engineering College</h4>
+                            </div>
+                            <div class="col-md-6"><span class="period">2018-2022</span></div>
+                        </div>
+                        <p class="text-muted">8.4 CGPA upto Semester 5</p>
+                    </div>
+                </div>
+                <div class="education group">
+                    <div class="heading">
+                        <h2 class="text-center">Paper presentations</h2>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>Tensorflow and its real time applications</h3>
+                                <h4 class="organization">Coimbatore Institute of Technology</h4>
+                            </div>
+                            <div class="col-6"><span class="period">August 2019</span></div>
                         </div>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>Web Developer</h3>
-                                <h4 class="organization">Special Inc.</h4>
+                                <h3>Brain Damage Detection using Tensorflow</h3>
+                                <h4 class="organization">Madras Institute of Technology</h4>
                             </div>
-                            <div class="col-md-6"><span class="period">12/2017 - Present</span></div>
+                            <div class="col-md-6"><span class="period">September 2020</span></div>
                         </div>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
                 </div>
                 <div class="education group">
                     <div class="heading">
-                        <h2 class="text-center">Education</h2>
+                        <h2 class="text-center">Workshops</h2>
                     </div>
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>High School</h3>
+                                <h3></h3>
                                 <h4 class="organization">Albert Einstein School</h4>
                             </div>
                             <div class="col-6"><span class="period">09/2005 - 05/2010</span></div>
@@ -119,19 +144,19 @@
                                 <h2>Contact Info</h2>
                                 <div class="row">
                                     <div class="col-1"><i class="icon ion-android-calendar icon"></i></div>
-                                    <div class="col-9"><span>10/10/1990</span></div>
+                                    <div class="col-9"><span>27/02/2000</span></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-1"><i class="icon ion-person icon"></i></div>
-                                    <div class="col-9"><span>John Smith</span></div>
+                                    <div class="col-9"><span>Navin A E</span></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-1"><i class="icon ion-ios-telephone icon"></i></div>
-                                    <div class="col-9"><span>+235 3217 424</span></div>
+                                    <div class="col-9"><span>+91 9944995714</span></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-1"><i class="icon ion-at icon"></i></div>
-                                    <div class="col-9"><span>lorem@email.com</span></div>
+                                    <div class="col-9"><span>navinandres@gmail.com</span></div>
                                 </div>
                             </div>
                         </div>
