--- a/cv.html
+++ b/cv.html
@@ -97,25 +97,25 @@
                 </div>
                 <div class="education group">
                     <div class="heading">
-                        <h2 class="text-center">Workshops</h2>
+                        <h2 class="text-center">workshops</h2>
                     </div>
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3></h3>
-                                <h4 class="organization">Albert Einstein School</h4>
+                                <h3>Internet of Things Workshop</h3>
+                                <h4 class="organization">Indian Institute of Technology, Bombay</h4>
                             </div>
-                            <div class="col-6"><span class="period">09/2005 - 05/2010</span></div>
+                            <div class="col-6"><span class="period">August 2019</span></div>
                         </div>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>Applied Physics</h3>
-                                <h4 class="organization">Stephen Hawking College</h4>
+                                <h3>Kaizen IoT Workshop</h3>
+                                <h4 class="organization">Anna University, Chennai</h4>
                             </div>
-                            <div class="col-md-6"><span class="period">09/2010 - 06/2015</span></div>
+                            <div class="col-md-6"><span class="period">September 2020</span></div>
                         </div>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
