--- a/hire-me.html
+++ b/hire-me.html
@@ -31,14 +31,9 @@
                     <h2>Hire Me</h2>
                 </div>
                 <form>
-                    <div class="form-group"><label for="subject">Subject</label><select class="form-control" id="subject">
-                            <option value="" selected="">Choose Subject</option>
-                            <option value="1">Subject 1</option>
-                            <option value="2">Subject 2</option>
-                            <option value="3">Subject 3</option>
-                        </select></div>
-                    <div class="form-group"><label for="email">Email</label><input class="form-control" type="email" id="email"></div>
-                    <div class="form-group"><label for="message">Message</label><textarea class="form-control" id="message"></textarea></div>
+                    <div class="form-group"><label for="subject">Navin A E</label></div>
+                    <div class="form-group"><label for="email">navinandres@gmai.com</label></div><label for="email">+91 9944995714</label>
+                    <div class="form-group"><label for="message">Message</label></div>
                     <div class="form-group">
                         <div class="form-row">
                             <div class="col-md-6"><label for="hire-date">Date</label><input class="form-control" id="hire-date" type="date"></div>
