--- a/projects-grid-cards.html
+++ b/projects-grid-cards.html
@@ -28,21 +28,21 @@
         <section class="portfolio-block projects-cards">
             <div class="container">
                 <div class="heading">
-                    <h2>Papers and projects</h2>
+                    <h2>projects</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-lg-4">
                         <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image1.jpg" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Lorem Ipsum</a></h6>
-                                <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                <h6><a href="#">Voting Application</a></h6>
+                                <p class="text-muted card-text">A basic voting system has been designed using Python.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image2.jpg" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Lorem Ipsum</a></h6>
+                                <h6><a href="#">Banking Application</a></h6>
                                 <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
                             </div>
                         </div>
@@ -50,7 +50,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image3.jpg" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Lorem Ipsum</a></h6>
+                                <h6><a href="#">Basic Website</a></h6>
                                 <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
                             </div>
                         </div>
