--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="avatar" style="background-image:url(&quot;assets/img/avatars/avatar.jpg&quot;);"></div>
                 <div class="about-me">
-                    <p>Hello! I am<strong> Navin</strong>. I work as interface and front end developer. I have passion for pixel perfect, minimal and easy to use interfaces.</p><a class="btn btn-outline-primary" role="button" href="#">Hire me</a>
+                    <p>Hello! I am<strong> Navin</strong>.A detail oriented, committed and responsible engineer pursuing Computer Science And Engineering and currently in the III rd year.</p><a class="btn btn-outline-primary" role="button" href="#">Hire me</a>
                 </div>
             </div>
         </section>
@@ -90,7 +90,7 @@
                                 <h3>Brain Damage Detection using Tensorflow</h3>
                                 <h4 class="organization">Madras Institute of Technology</h4>
                             </div>
-                            <div class="col-md-6"><span class="period">September 2020</span></div>
+                            <div class="col-md-6"><span class="period">February 2020</span></div>
                         </div>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
@@ -105,9 +105,8 @@
                                 <h3>Internet of Things Workshop</h3>
                                 <h4 class="organization">Indian Institute of Technology, Bombay</h4>
                             </div>
-                            <div class="col-6"><span class="period">August 2019</span></div>
+                            <div class="col-6"><span class="period">August 2018</span></div>
                         </div>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
                     <div class="item">
                         <div class="row">
@@ -115,27 +114,102 @@
                                 <h3>Kaizen IoT Workshop</h3>
                                 <h4 class="organization">Anna University, Chennai</h4>
                             </div>
-                            <div class="col-md-6"><span class="period">September 2020</span></div>
+                            <div class="col-md-6"><span class="period">September 2019</span></div>
                         </div>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
                 </div>
+                <section class="portfolio-block skills">
+                    <div class="container">
+                        <div class="heading">
+                            <h2>Certifications</h2>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card special-skill-item border-0">
+                                    <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Career Edge - TCS</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card special-skill-item border-0">
+                                    <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Python for Data Science IBM</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card special-skill-item border-0">
+                                    <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">&nbsp;C Data Structure and Algorithms - Udemy</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="heading">
+                            <h2>area of interest</h2>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card special-skill-item border-0">
+                                    <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Data Structures</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card special-skill-item border-0">
+                                    <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">Front End Web Development</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card special-skill-item border-0">
+                                    <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
+                                    <div class="card-body">
+                                        <h3 class="card-title">&nbsp;Computer Vision</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <div class="group">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="skills portfolio-info-card">
                                 <h2>Skills</h2>
+                                <h3>C</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span class="sr-only">90%</span></div>
+                                </div>
+                                <h3>Java</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="sr-only">80%</span></div>
+                                </div>
+                                <h3>Python</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span class="sr-only">90%</span></div>
+                                </div>
                                 <h3>HTML</h3>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="sr-only">100%</span></div>
                                 </div>
-                                <h3>PHP</h3>
+                                <h3>CSS</h3>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span class="sr-only">90%</span></div>
                                 </div>
-                                <h3>JavaScript</h3>
+                                <h3>SQL</h3>
                                 <div class="progress">
-                                    <div class="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="sr-only">80%</span></div>
+                                    <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span class="sr-only">90%</span></div>
                                 </div>
                             </div>
                         </div>
@@ -162,6 +236,7 @@
                         </div>
                     </div>
                 </div>
+                <section class="portfolio-block skills"></section>
                 <div class="hobbies group">
                     <div class="heading">
                         <h2 class="text-center">Hobbies</h2>
